--- a/final_report/experiment.tex
+++ b/final_report/experiment.tex
@@ -1,1 +1,5 @@
 Here's experiment in another file
+
+We use *** motion capture files from CMU motion capture library.
+
+% table, list all actions, frames, 
