--- a/final_report/introduction.tex
+++ b/final_report/introduction.tex
@@ -1,1 +1,45 @@
-Here's introduction in another file
+%introduce why it's important
+Fighting games are very popular since the smooth animation and the energetic of martial arts. 
+exaggerate  fancy skill
+
+
+%fighting game by motion capture
+however, motion capture is limited in 
+
+If we can't get the appropriate or desired motion, the virtual character may not 
+to perform some actions smoothly.
+
+
+%motion graph successfully
+generate transition between two motion clips. 
+
+Actually, creating transition between two motion is a hard animation problem.
+% why it's so difficult
+mutsukashi..
+
+
+
+%what we've done
+In this paper, we implemented the motion graph from [ref].
+The idea of motion graph is to find the transition points between two clips, 
+whose poses are similar. 
+With the detecting algorithm, we can automatically find the transition points 
+and reliably generate the transition with certain blending techniques.
+
+
+%the experiment result
+The result shows in Section4. We collect XX motion capture files from CMU motion 
+capture library website. The 
+
+
+% the following paper organization:
+the following of this paper is organised  as follows.
+In Section 2 we describe related work. In Section 3 we describe how a motion
+graph is constructed from a database of motion capture. 
+
+InSection 4 we set forth a general framework for extracting motion from the
+motion graph that meets user specifications. 
+
+Section 5 discusses the specific problem of generating movements along a path and how
+it is handled in our framework. We conclude in Section 6 with a
+discussion of the scalability of our app
