--- a/final_report/main.tex
+++ b/final_report/main.tex
@@ -34,10 +34,8 @@
 \begin{document}  % required; the document starts here
 
 \title{\TitleFont Motion Graph on Fighting combo motion}
-\author{Chien-Hsin Hsueh\\chhhsueh@ucdavis.edu\\UC Davis }
-\author{Min Shih\\minshih@ucdavis.edu\\UC Davis }
+\author{Chien-Hsin Hsueh   Min Shih\\chhhsueh,minshih@ucdavis.edu\\UC Davis }
 \maketitle
-
 
 
 \section{Abstract}
@@ -50,7 +48,7 @@
 \input{relatedwork}
 
 
-\section{System design}
+\section{Motion Graph Construction}
 \input{system}
 
 \section{Experiment}
