--- a/final_report/system.tex
+++ b/final_report/system.tex
@@ -14,6 +14,9 @@ looks natural.
 In this section, we discuss about how to detect the transition points between two 
 motion clips. 
 
+Generate point cloud, see Fig.[]. 
+
+from i to j frame, window size k frames.
 
 
 \subsection{Motion Transition}
@@ -24,7 +27,7 @@ Use Floyd-Warshall algorithm to construct the all-pairs shortest paths.
 
 %the data structure of a node:
 
-\subsection{Consistent Momemtum between Motions}
+\subsection{Consistent Momentum between Motions}
 Due to we can't get the motion capture files they are consistent in the 
 momentum, it's required to synthesise the motion with the same momentum or even 
 exaggerate the motion to make it looks powerful in the fighting.
