--- a/final_report/relatedwork.tex
+++ b/final_report/relatedwork.tex
@@ -1,1 +1,14 @@
-Here's related work in another file
+% the Motion graph, done by Kovar 2002
+In [], they present the idea of motion graph, which successfully transform the motion synthesis problem 
+into selecting transition candidate notes on the motion clips with graph walks. 
+By extracting the closest pose between two clips, the transition motion can be done by motion blending techniques.
+The final motion can be synthesized by walking on the graph and concatenate the visited segments.
+
+% other paper  Motion graph ++
+In[motiongraph++], they introduced a generative statistical model to analyze and
+synthesize a rich repertoire of human activities. 
+Their models are appealing for motion analysis and synthesis because they are compact,
+highly structured, contact aware, semantic embedding, and scalable to huge and heterogeneous datasets.
+
+Another motion synthesis approach is to construct statistical models. in [], they presented the kernel-based 
+probability distribution to generate new motion based on statistical factors.
