Final! finished the report

--- a/final_report/experiment.tex
+++ b/final_report/experiment.tex
@@ -1,5 +1,34 @@
-Here's experiment in another file
-
-We use *** motion capture files from CMU motion capture library.
+In our preliminary experiment, we selected 8 motion capture files from CMU motion capture library~\cite{cmu} 
+as our candidate motions, see Table.~\ref{table:motionlist}.
+Constructing motion graph is the most time-consuming task. In this experiment, 
+we took about 24 hours to the final construct motion graph under Intel Core i7 960 3.2GHz, RAM 12 GB, Window7 64bit.
+The generated result shows in Table.~\ref{table:motionlist}. 
+The result video can be watched at~\cite{video}.
+In this experiment, we generated 2886 transition nodes and 5652 edges. 
+The result shows our algorithm successfully generate a smooth and seamless 
+synthesized motion. Most transition can be done in a third of second.
 
 % table, list all actions, frames, 
+
+\begin{table}[ht]
+\caption{Candidate motion capture clips}
+\centering
+\begin{tabular}{c c c c} 
+\hline\hline 
+\# & Motion name & Frame\# & Transition node# \\ [0.5ex] % inserts table 
+%heading
+\hline % inserts single horizontal line
+1 & Rest & 799 & 386 \\ % inserting body of the table
+2 & Walk & 343 & 166 \\
+3 & Run & 130 & 50 \\
+4 & Punch & 1854 & 453 \\
+5 & Boxing & 2783 & 679 \\
+6 & Jump & 410 & 179 \\
+7 & Slash & 2251 & 456 \\
+8 & MartialArts & 3261 & 517 \\ [1ex]
+\hline % inserts single horizontal line
+total &  & 11531 & 2886 \\ [1ex]
+\hline
+\end{tabular}
+\label{table:motionlist} % is used to refer this table in the text
+\end{table}
