--- a/final_report/introduction.tex
+++ b/final_report/introduction.tex
@@ -22,7 +22,7 @@ Our goal is to generate the realistic motion by motion capture library while
 also giving a user the ability to control the virtual character to act smooth 
 fighting actions.
 %what we've done
-In this work, we implemented the motion graph from [ref].
+In this work, we implemented the motion graph from~\cite{kovar2002}.
 The idea of motion graph is to find the transition points between two clips, 
 whose poses are similar. 
 With the detecting algorithm, we can automatically find the transition points 
@@ -30,8 +30,8 @@ and reliably generate the transition with certain blending techniques.
 
 %the experiment result
 The result shows in Section4. We collect 8 motion capture files from CMU motion 
-capture website[]. The result video can be seen at []. In the result, we 
-generate xxx transition nodes, xxx transitions, xxx segments. 
+capture website~\cite{cmu}. The result video can be seen at~\cite{video}. In the result, we 
+generate 2886 transition nodes, and 5652 transitions from 8 motion clips. 
 The result shows the motions are highly interactive and smooth with realistic.
 
 % the following paper organization:
