--- a/final_report/abstract.tex
+++ b/final_report/abstract.tex
@@ -1,8 +1,8 @@
-In this work, we implement a interactive character animation system based on Motion Graph [ref].
+In this work, we implement a interactive character animation system based on Motion Graph~\cite{kovar2002}.
 The idea of the work is based on the fighting game: the virtual character can perform several actions 
 consecutively and seamlessly. 
 The fighting combo skill is a key factor for playing a fighting game smoothly.
-Referring to [ref], given a set of motion capture files, the system automatically 
+Referring to~\cite{kovar2002}, given a set of motion capture files, the system automatically 
 generate a directed graph to concatenate motion and generate transition between 
 two motion clips.
 By walking on the graph, the character can easily generate a smooth animation 
